--- a/index.html
+++ b/index.html
@@ -21,25 +21,76 @@
 		<title>Frontend Mentor | Meet landing page</title>
 	</head>
 	<body>
+		<img class="logo" src="/logo.svg" alt="" />
 		<header>
 			<img src="/assets/desktop/image-hero-left.png" alt="" />
 			<div class="header-content">
 				<h1>Group Chat for everyone</h1>
-				<p>
+				<p class="header-paragraph">
 					Meet makes it easy to connect with others face-to-face virtually and
 					collaborate across any device.
 				</p>
-				<button class="btn download-btn">Download <span>v1.3</span></button>
+				<button class="btn download-btn">
+					Download <span class="span-blue">v1.3</span>
+				</button>
 				<button class="btn what-is-it-btn">What is it?</button>
 			</div>
 			<img src="/assets/desktop/image-hero-right.png" alt="" />
 		</header>
-		Meet makes it easy to connect with others face-to-face virtually and
-		collaborate across any device. Download v1.3 What is it? 01 Built for modern
-		use Smarter meetings, all in one place Send messages, share files, show your
-		screen, and record your meetings — all in one workspace. Control who can
-		join with invite-only team access, data encryption, and data export. 02
-		Experience more together Stay connected with reliable HD meetings and
-		unlimited one-on-one and group video sessions. Download v1.3
+		<!-- Page Divider Line 1 -->
+		<div class="line-wrapper">
+			<div class="line"></div>
+			<div class="circle">01</div>
+		</div>
+
+		<!-- Photos Section -->
+
+		<div class="img-container">
+			<img
+				src="/assets/desktop/image-women-videochatting.jpg"
+				alt=""
+				class="body-img"
+			/>
+			<img
+				src="/assets/desktop/image-woman-in-videocall.jpg"
+				alt=""
+				class="body-img"
+			/>
+			<img
+				src="/assets/desktop/image-men-in-meeting.jpg"
+				alt=""
+				class="body-img"
+			/>
+			<img
+				src="/assets/desktop/image-man-texting.jpg"
+				alt=""
+				class="body-img"
+			/>
+		</div>
+		<!-- Meetings Section -->
+		<div class="meetings">
+			<p class="meetings-intro">Built for modern use</p>
+			<h2 class="mettings-title">Smarter meetings, all in one place</h2>
+			<p class="meetings-paragraph">
+				Send messages, share files, show your screen, and record your meetings —
+				all in one workspace. Control who can join with invite-only team access,
+				data encryption, and data export.
+			</p>
+		</div>
+		<!-- Page Divider Line 2 -->
+		<div class="line-wrapper">
+			<div class="line"></div>
+			<div class="circle">02</div>
+		</div>
+		<footer>
+			<h3 class="footer-title">Experience more together</h3>
+			<p class="footer-paragraph">
+				Stay connected with reliable HD meetings and unlimited one-on-one and
+				group video sessions.
+			</p>
+			<button class="btn download-btn btn-purple">
+				Download <span class="span-purple">v1.3</span>
+			</button>
+		</footer>
 	</body>
 </html>
